fixed right side small gap

--- a/LESS/navigation_top.less
+++ b/LESS/navigation_top.less
@@ -181,6 +181,22 @@
 
 // NAVBAR TOP LINKS
 //---------------------------------------------
+.navbar-top-links.navbar-right {
+ margin-right: -20px;
+}
+
+.navbar-top-links.navbar-right ~ .navbar-top-links.navbar-right {
+  margin-right: 0px;
+}
+
+.navbar-top-links.navbar-right a:last-child {
+  padding-right: 25px;
+}
+
+.navbar-top-links.navbar-right a:last-child ~ .navbar-top-links.navbar-right a:last-child {
+  padding-right: 20px;
+}
+
 .navbar-top-links li {
   display: inline-block;
 }
